--- a/CSRWebAPI/appsettings.json
+++ b/CSRWebAPI/appsettings.json
@@ -11,9 +11,8 @@
     "Name": "log4net.config"
   },
   "ConnectionStrings": {
-    // "DefaultConnection": "Server=.;Database=CSRDB;Persist Security Info=True;User ID=csruser;MultipleActiveResultSets=True; Password=Pass123@;"
-    //"DefaultConnection": "Server=NSESQL\\XWEBTEST;Initial Catalog=CSRDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "DefaultConnection": "Server=tcp:basicdb.database.windows.net,1433;Initial Catalog=CSRDB;Persist Security Info=False;User ID=nuser;Password=Csr1234@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    
+    "DefaultConnection": "Server=tcp:basicdb.database.windows.net,1433;Initial Catalog=CSRDB;Persist Security Info=False;User ID=******;Password=**********;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "MemoryCache": {
     "CacheTimeOutInHours": "1"
